--- a/TestPrjAttract/iPad.storyboard
+++ b/TestPrjAttract/iPad.storyboard
@@ -296,8 +296,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rzv-45-8OF">
+                                <rect key="frame" x="0.0" y="70" width="768" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="647" id="bAk-1R-1vw"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="AfO-ml-bsA">
+                                    <size key="itemSize" width="640" height="640"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HeroesCollectionViewCell" id="uPS-by-Iva" customClass="HeroesCollectionViewCell" customModule="TestPrjAttract" customModuleProvider="target">
+                                        <rect key="frame" x="64" y="0.0" width="640" height="640"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="640" height="640"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hjr-HO-2aj">
+                                                    <rect key="frame" x="20" y="20" width="600" height="482"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="482" id="7Oi-PA-WVl"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KF-Id-E65">
+                                                    <rect key="frame" x="20" y="530" width="76" height="39"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTe-I6-v0d">
+                                                    <rect key="frame" x="20" y="589" width="50" height="26"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OuD-jJ-DBM">
+                                                    <rect key="frame" x="578" y="587" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="hjr-HO-2aj" firstAttribute="top" secondItem="uPS-by-Iva" secondAttribute="top" constant="20" id="3Sg-zK-cb8"/>
+                                            <constraint firstItem="CTe-I6-v0d" firstAttribute="leading" secondItem="uPS-by-Iva" secondAttribute="leadingMargin" constant="12" id="4m9-JQ-lko"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="OuD-jJ-DBM" secondAttribute="bottom" constant="24" id="TeD-aX-6x8"/>
+                                            <constraint firstItem="hjr-HO-2aj" firstAttribute="leading" secondItem="uPS-by-Iva" secondAttribute="leading" constant="20" id="VIV-9j-iSH"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="OuD-jJ-DBM" secondAttribute="trailing" constant="12" id="gf7-xx-u0p"/>
+                                            <constraint firstItem="CTe-I6-v0d" firstAttribute="top" secondItem="9KF-Id-E65" secondAttribute="bottom" constant="20" id="hHW-y7-Muv"/>
+                                            <constraint firstAttribute="trailing" secondItem="hjr-HO-2aj" secondAttribute="trailing" constant="20" id="pBe-f6-6bo"/>
+                                            <constraint firstItem="9KF-Id-E65" firstAttribute="leading" secondItem="uPS-by-Iva" secondAttribute="leadingMargin" constant="12" id="wbb-vo-WfL"/>
+                                            <constraint firstItem="9KF-Id-E65" firstAttribute="top" secondItem="hjr-HO-2aj" secondAttribute="bottom" constant="28" id="x0j-lw-IOs"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="heroDate" destination="OuD-jJ-DBM" id="iyx-4w-l0V"/>
+                                            <outlet property="heroDescription" destination="CTe-I6-v0d" id="jYe-al-yhw"/>
+                                            <outlet property="heroImage" destination="hjr-HO-2aj" id="VmL-20-lrv"/>
+                                            <outlet property="heroName" destination="9KF-Id-E65" id="ti3-pm-aGv"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wx-Bs-VOf">
-                                <rect key="frame" x="363" y="536.5" width="42" height="21"/>
+                                <rect key="frame" x="363" y="820" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -305,7 +371,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="4wx-Bs-VOf" firstAttribute="centerY" secondItem="2Wr-0y-y1Q" secondAttribute="centerY" id="YLH-hz-2ZT"/>
+                            <constraint firstItem="rzv-45-8OF" firstAttribute="top" secondItem="2Wr-0y-y1Q" secondAttribute="top" id="4NK-6d-5PE"/>
+                            <constraint firstItem="rzv-45-8OF" firstAttribute="trailing" secondItem="2Wr-0y-y1Q" secondAttribute="trailing" id="U9X-PJ-b6e"/>
+                            <constraint firstItem="rzv-45-8OF" firstAttribute="leading" secondItem="2Wr-0y-y1Q" secondAttribute="leading" id="UY4-XC-O2V"/>
+                            <constraint firstItem="4wx-Bs-VOf" firstAttribute="centerY" secondItem="2Wr-0y-y1Q" secondAttribute="centerY" constant="283.5" id="YLH-hz-2ZT"/>
                             <constraint firstItem="4wx-Bs-VOf" firstAttribute="centerX" secondItem="2Wr-0y-y1Q" secondAttribute="centerX" id="rd1-n9-Yuz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2Wr-0y-y1Q"/>
@@ -317,7 +386,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HXE-Qh-gmK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2167" y="23"/>
+            <point key="canvasLocation" x="2166.40625" y="22.8515625"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DJW-ea-v31">
