added image cache

--- a/TestPrjAttract/Base.lproj/iPhone.storyboard
+++ b/TestPrjAttract/Base.lproj/iPhone.storyboard
@@ -270,7 +270,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="362" id="ThO-A0-vgE"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="JnX-Ik-51Y">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" sectionInsetReference="safeArea" id="JnX-Ik-51Y">
                                     <size key="itemSize" width="200" height="326"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
