--- a/TestPrjAttract/iPad.storyboard
+++ b/TestPrjAttract/iPad.storyboard
@@ -25,6 +25,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="mQO-IE-d7D" id="a6T-4A-bKW"/>
+                                    </connections>
                                 </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="120" id="s0n-8W-Rfn" customClass="CustomCell" customModule="TestPrjAttract" customModuleProvider="target">
@@ -296,46 +299,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rzv-45-8OF">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wx-Bs-VOf">
+                                <rect key="frame" x="363" y="820" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rzv-45-8OF">
                                 <rect key="frame" x="0.0" y="70" width="768" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="647" id="bAk-1R-1vw"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="AfO-ml-bsA">
-                                    <size key="itemSize" width="640" height="640"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="10" id="AfO-ml-bsA">
+                                    <size key="itemSize" width="599" height="640"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HeroesCollectionViewCell" id="uPS-by-Iva" customClass="HeroesCollectionViewCell" customModule="TestPrjAttract" customModuleProvider="target">
-                                        <rect key="frame" x="64" y="0.0" width="640" height="640"/>
+                                        <rect key="frame" x="10" y="3.5" width="599" height="640"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="640" height="640"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="599" height="640"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hjr-HO-2aj">
-                                                    <rect key="frame" x="20" y="20" width="600" height="482"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="482" id="7Oi-PA-WVl"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="0.0" y="0.0" width="599" height="482"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KF-Id-E65">
-                                                    <rect key="frame" x="20" y="530" width="76" height="39"/>
+                                                    <rect key="frame" x="20" y="521" width="76" height="39"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTe-I6-v0d">
-                                                    <rect key="frame" x="20" y="589" width="50" height="26"/>
+                                                    <rect key="frame" x="20" y="594" width="50" height="26"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OuD-jJ-DBM">
-                                                    <rect key="frame" x="578" y="587" width="42" height="21"/>
+                                                    <rect key="frame" x="537" y="599" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -343,15 +349,17 @@
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="hjr-HO-2aj" firstAttribute="top" secondItem="uPS-by-Iva" secondAttribute="top" constant="20" id="3Sg-zK-cb8"/>
-                                            <constraint firstItem="CTe-I6-v0d" firstAttribute="leading" secondItem="uPS-by-Iva" secondAttribute="leadingMargin" constant="12" id="4m9-JQ-lko"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="OuD-jJ-DBM" secondAttribute="bottom" constant="24" id="TeD-aX-6x8"/>
-                                            <constraint firstItem="hjr-HO-2aj" firstAttribute="leading" secondItem="uPS-by-Iva" secondAttribute="leading" constant="20" id="VIV-9j-iSH"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="OuD-jJ-DBM" secondAttribute="trailing" constant="12" id="gf7-xx-u0p"/>
-                                            <constraint firstItem="CTe-I6-v0d" firstAttribute="top" secondItem="9KF-Id-E65" secondAttribute="bottom" constant="20" id="hHW-y7-Muv"/>
-                                            <constraint firstAttribute="trailing" secondItem="hjr-HO-2aj" secondAttribute="trailing" constant="20" id="pBe-f6-6bo"/>
-                                            <constraint firstItem="9KF-Id-E65" firstAttribute="leading" secondItem="uPS-by-Iva" secondAttribute="leadingMargin" constant="12" id="wbb-vo-WfL"/>
-                                            <constraint firstItem="9KF-Id-E65" firstAttribute="top" secondItem="hjr-HO-2aj" secondAttribute="bottom" constant="28" id="x0j-lw-IOs"/>
+                                            <constraint firstAttribute="bottom" secondItem="hjr-HO-2aj" secondAttribute="bottom" constant="158" id="3uf-YC-cJT"/>
+                                            <constraint firstAttribute="trailing" secondItem="OuD-jJ-DBM" secondAttribute="trailing" constant="20" id="QLu-hJ-goY"/>
+                                            <constraint firstAttribute="trailing" secondItem="hjr-HO-2aj" secondAttribute="trailing" id="QPf-qA-pXx"/>
+                                            <constraint firstItem="CTe-I6-v0d" firstAttribute="leading" secondItem="uPS-by-Iva" secondAttribute="leading" constant="20" id="SA3-gH-wdW"/>
+                                            <constraint firstItem="hjr-HO-2aj" firstAttribute="leading" secondItem="uPS-by-Iva" secondAttribute="leading" id="Ta4-fR-WhN"/>
+                                            <constraint firstItem="CTe-I6-v0d" firstAttribute="top" secondItem="9KF-Id-E65" secondAttribute="bottom" constant="34" id="W2L-Eh-zXw"/>
+                                            <constraint firstItem="9KF-Id-E65" firstAttribute="top" secondItem="hjr-HO-2aj" secondAttribute="bottom" constant="39" id="dnL-mb-yKv"/>
+                                            <constraint firstItem="OuD-jJ-DBM" firstAttribute="top" secondItem="hjr-HO-2aj" secondAttribute="bottom" constant="117" id="laP-ZM-eJV"/>
+                                            <constraint firstItem="9KF-Id-E65" firstAttribute="leading" secondItem="uPS-by-Iva" secondAttribute="leading" constant="20" id="nw1-dA-J8b"/>
+                                            <constraint firstItem="hjr-HO-2aj" firstAttribute="top" secondItem="uPS-by-Iva" secondAttribute="top" id="oVD-QS-WqW"/>
+                                            <constraint firstItem="hjr-HO-2aj" firstAttribute="centerX" secondItem="uPS-by-Iva" secondAttribute="centerX" id="tux-UG-s26"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="heroDate" destination="OuD-jJ-DBM" id="iyx-4w-l0V"/>
@@ -361,27 +369,34 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="gfW-v8-aHn" id="hUM-RG-lMb"/>
+                                    <outlet property="delegate" destination="gfW-v8-aHn" id="06L-TF-z9T"/>
+                                </connections>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wx-Bs-VOf">
-                                <rect key="frame" x="363" y="820" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="PaI-EU-2yj">
+                                <rect key="frame" x="364.5" y="725" width="39" height="37"/>
+                                <color key="pageIndicatorTintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="currentPageIndicatorTintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="rzv-45-8OF" firstAttribute="top" secondItem="2Wr-0y-y1Q" secondAttribute="top" id="4NK-6d-5PE"/>
+                            <constraint firstItem="PaI-EU-2yj" firstAttribute="top" secondItem="rzv-45-8OF" secondAttribute="bottom" constant="8" id="Ssh-JT-PvB"/>
                             <constraint firstItem="rzv-45-8OF" firstAttribute="trailing" secondItem="2Wr-0y-y1Q" secondAttribute="trailing" id="U9X-PJ-b6e"/>
                             <constraint firstItem="rzv-45-8OF" firstAttribute="leading" secondItem="2Wr-0y-y1Q" secondAttribute="leading" id="UY4-XC-O2V"/>
                             <constraint firstItem="4wx-Bs-VOf" firstAttribute="centerY" secondItem="2Wr-0y-y1Q" secondAttribute="centerY" constant="283.5" id="YLH-hz-2ZT"/>
+                            <constraint firstItem="PaI-EU-2yj" firstAttribute="centerX" secondItem="2Wr-0y-y1Q" secondAttribute="centerX" id="kYe-6p-N2B"/>
                             <constraint firstItem="4wx-Bs-VOf" firstAttribute="centerX" secondItem="2Wr-0y-y1Q" secondAttribute="centerX" id="rd1-n9-Yuz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2Wr-0y-y1Q"/>
                     </view>
                     <navigationItem key="navigationItem" title="Detail" largeTitleDisplayMode="never" id="d0M-H6-p5F"/>
                     <connections>
+                        <outlet property="collectionView" destination="rzv-45-8OF" id="8xY-O8-Jml"/>
                         <outlet property="descriptionLabel" destination="4wx-Bs-VOf" id="Kis-Td-GwN"/>
+                        <outlet property="pageControl" destination="PaI-EU-2yj" id="zxf-B6-6Xx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HXE-Qh-gmK" userLabel="First Responder" sceneMemberID="firstResponder"/>
