try fixes iPad Collection

--- a/TestPrjAttract/Base.lproj/iPhone.storyboard
+++ b/TestPrjAttract/Base.lproj/iPhone.storyboard
@@ -315,8 +315,8 @@
                                             <constraint firstItem="fJz-DF-qJr" firstAttribute="top" secondItem="PNN-oK-uqD" secondAttribute="bottom" constant="7" id="240-4j-i2x"/>
                                             <constraint firstItem="PNN-oK-uqD" firstAttribute="top" secondItem="NRl-qI-8Nm" secondAttribute="top" id="3mo-AC-UH5"/>
                                             <constraint firstItem="fJz-DF-qJr" firstAttribute="leading" secondItem="NRl-qI-8Nm" secondAttribute="leadingMargin" constant="12" id="85k-Sg-haq"/>
-                                            <constraint firstAttribute="trailing" secondItem="R09-io-HFk" secondAttribute="trailing" constant="20.5" id="Gok-yW-9I3"/>
-                                            <constraint firstItem="R09-io-HFk" firstAttribute="top" secondItem="PNN-oK-uqD" secondAttribute="bottom" constant="44" id="VII-XR-9c6"/>
+                                            <constraint firstAttribute="trailing" secondItem="R09-io-HFk" secondAttribute="trailing" constant="20.5" id="BfV-xq-Q3k"/>
+                                            <constraint firstItem="R09-io-HFk" firstAttribute="top" secondItem="PNN-oK-uqD" secondAttribute="bottom" constant="44" id="E0J-fb-3OV"/>
                                             <constraint firstAttribute="trailing" secondItem="PNN-oK-uqD" secondAttribute="trailing" id="bBe-7A-SFB"/>
                                             <constraint firstItem="PNN-oK-uqD" firstAttribute="leading" secondItem="NRl-qI-8Nm" secondAttribute="leading" id="dud-aQ-Z6q"/>
                                             <constraint firstItem="RiT-iS-0qw" firstAttribute="leading" secondItem="NRl-qI-8Nm" secondAttribute="leadingMargin" constant="12" id="gKr-ds-lhl"/>
